tests/burghard/fail/endoption_no_ifoption.wsa
    push 1
endoption
    push 2
